fix: collapse

--- a/src/layout/style/header.module.scss
+++ b/src/layout/style/header.module.scss
@@ -21,14 +21,14 @@
     @include flex;
     cursor: pointer;
 
-    &.collapse__down {
-        transform: rotate(90deg);
-    }
-
     .collapse__icon {
         @include text(30px, $icon, null, center);
         transition: all 0.3s cubic-bezier(0.2, 0, 0, 1) 0s;
         margin: auto;
+
+        &.collapse__icon-down {
+            transform: rotate(90deg);
+        }
     }
 
     &:hover {
